package ice.ice;

public abstract class Offset{

}
